# onespace_schuduling_agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  mkdocs.yml  pyproject.toml  server_run.py
.claude/skills/senior-engineer/: SKILL.md
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  schedules.py
app/core/: config.py  exceptions.py  logging.py
app/db/: mongodb.py
app/models/: __init__.py  schedule.py
app/scheduler/: __init__.py  actions.py  jobs.py  scheduler.py
app/schemas/: response.py  schedule.py
app/services/: schedule_service.py
docs/: errors.md  index.md  recipes.md
docs/api/: health.md  schedules.md
docs/concepts/: actions.md  response-envelope.md  schedules.md  triggers.md
tests/: conftest.py  test_health.py  test_schedules.py  test_schema_validation.py  test_trigger.py  test_webhook_action.py
