[project]
name = "onespace-schuduling-agent"
version = "0.1.0"
description = "Production-grade scheduling service backend (FastAPI + MongoDB + APScheduler)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "granian>=1.6.0",
    "beanie>=2.0.0",
    "apscheduler>=3.11.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
docs = [
    "mkdocs-material>=9.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Put the project root on sys.path so `import app...` resolves without an
# __init__.py / installed package.
pythonpath = ["."]
